7151427: Fix the potential memory leak in error handling code in X11SurfaceData.c

Free the memory in the error handling code.

Reviewed-by: prr, jgodinez, bae